# spotube-package

./: .gitignore  LICENSE  README.md  TODO  demo.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build.yml
spotube/: __init__.py  dependency_handler.py  download_manager.py  downloader_utils.py  progress_bar.py
spotube_package/: __init__.py  authenticator.py  dependency_handler.py  download_manager.py  downloader_class.py  downloader_utils.py  progress_bar.py
src/spotube/: __init__.py  downloader.py  downloader_class.py  downloader_utils.py
tests/: test_downloader.py  test_utils.py
