[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotube"
dynamic = ["dependencies"]
version = "0.0.3"
authors = [
  { name="Giorgos Nikolaou", email="giorgosnl17@gmail.com" },
]

dependencies = {file = ["requirements.txt"]}

description = "A Python package to download Spotify playlists locally including the cover art, metadata and lyrics by leveraging the Spotify, YouTube and Genius APIs."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GiorgosNik/spotube-package"
"Bug Tracker" = "https://github.com/GiorgosNik/spotube-package/issues"