[tool.poetry]
name = "spotube"
version = "0.1.0"
description = "A Python package to download Spotify playlists locally including the cover art, metadata and lyrics by leveraging the Spotify, YouTube and Genius APIs."
authors = ["GiorgosNik <giorgosnl17@gmail.com>"]
license = "Free for non-commercial use"
readme = "README.md"
packages = [{include = "spotube_package"}]

[tool.poetry.dependencies]
python = "^3.10"
eyed3 = "^0.9.7"
lyricsgenius = "^3.0.1"
pydub = "^0.25.1"
pytest = "^7.2.2"
requests = "^2.28.2"
spotipy = "^2.22.1"
tqdm = "^4.65.0"
youtube-search-python = "^1.6.6"
yt-dlp = "^2023.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
